output-cap-test
Traceback (most recent call last):
  File "/home/dawid/Documents/RP1/IEEE-802.11ah-ns-3/.waf3-1.8.19-b1fc8f7baef51bd2db4c2971909a568d/waflib/Scripting.py", line 100, in waf_entry_point
    set_main_module(os.path.normpath(os.path.join(Context.run_dir,Context.WSCRIPT_FILE)))
  File "/home/dawid/Documents/RP1/IEEE-802.11ah-ns-3/.waf3-1.8.19-b1fc8f7baef51bd2db4c2971909a568d/waflib/Scripting.py", line 125, in set_main_module
    Context.g_module=Context.load_module(file_path)
  File "/home/dawid/Documents/RP1/IEEE-802.11ah-ns-3/.waf3-1.8.19-b1fc8f7baef51bd2db4c2971909a568d/waflib/Context.py", line 354, in load_module
    try:exec(compile(code,path,'exec'),module.__dict__)
  File "/home/dawid/Documents/RP1/IEEE-802.11ah-ns-3/wscript", line 24, in <module>
    import wutils
  File "/home/dawid/Documents/RP1/IEEE-802.11ah-ns-3/wutils.py", line 136
    except WindowsError, ex:
                       ^
SyntaxError: invalid syntax
